--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=job-application-manager
+
+
+spring.datasource.url=jdbc:sqlserver://DESKTOP-E1M122C;databaseName=job-application-manager-db;integratedSecurity=true
+
+# spring.datasource.url=jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=customer
+# spring.datasource.username=username
+# spring.datasource.password=password
