--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,12 @@ server:
 spring:
   main:
     web-application-type: servlet
+  datasource:
+    url: jdbc:postgresql://localhost:5432/job-application-manager-db
+    username: admin
+    password: admin
+  jpa:
+    ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
