feat: configures table and relation annotations in model classes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,12 @@ spring:
     web-application-type: servlet
   datasource:
     url: jdbc:postgresql://localhost:5432/job-application-manager-db
-    username: admin
+    username: postgres
     password: admin
   jpa:
+    generate-ddl: true
     ddl-auto: create-drop
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
